--- a/wp-content/themes/Theme/stylesheets/scss/modules/_homepage-blog-tiles.scss
+++ b/wp-content/themes/Theme/stylesheets/scss/modules/_homepage-blog-tiles.scss
@@ -1,135 +1,135 @@
 .blog-home {
-	.l-container {
-		z-index: 100;
-		.blog-tiles {
-			display: flex;
-			flex-wrap: wrap;
-			width: 100%;
-      background: #fffb;
-      border-bottom-left-radius: 2px;
-      border-bottom-right-radius: 2px;
+    .l-container {
+        z-index: 100;
+        .blog-tiles {
+            display: flex;
+            flex-wrap: wrap;
+            width: 100%;
+            background: #fffb;
+            border-bottom-left-radius: 2px;
+            border-bottom-right-radius: 2px;
 
-			// @media screen and (min-width: 800px) {
-			// 	margin-bottom: 30px;
-			// }
+            // @media screen and (min-width: 800px) {
+            // 	margin-bottom: 30px;
+            // }
 
-			.blog-tile {
-				flex: 0 0 100%;
-				max-height: 450px;
-				max-width: none;
-				@media screen and (min-width: 800px) {
-					flex: 0 0 33%;
-					max-height: none;
-				}
-				// height: auto;
-				padding: 0;
-				.overlay {
-					position: absolute;
-					width: 100%;
-					height: 100%;
-					background-color: rgba(0,0,0,0.3);
-					left: 0;
-					pointer-events: none;
-					top: 0;
-					z-index: 10;
-				}
-				&:before {
-					content: '';
-					float: left;
-					padding-top: 100%;
-				}
-				.blog-post__thumbnail {
-					background-size: cover;
-					background-repeat: no-repeat;
-					background-position: center;
-				}
-				&__content-container {
-					display: flex;
-					flex-direction: column;
-					height: 160px;
-					margin-bottom: 30px;
-				}
-				&__content__category {
-					position: relative;
-					z-index: 100;
-				}
-				&__content__title {
-					max-width: 80%;
-					font-weight: 400;
-					position: relative;
-					z-index: 100;
-				}
-				&__content__subtitle {
-					display: none;
-				}
-				&__content__read-more {
-					margin-bottom: 0 !important;
-				}
-				&--featured {
-					flex: 0 0 calc(100% - 6px);
-					max-width: none;
-					// overflow: hidden;
-					margin-bottom: 150px;
-					@media screen and (min-width: 800px) {
-						margin-bottom: 5px; 
-					}
+            .blog-tile {
+                flex: 0 0 100%;
+                max-height: 450px;
+                max-width: none;
+                @media screen and (min-width: 800px) {
+                    flex: 0 0 33%;
+                    max-height: none;
+                }
+                // height: auto;
+                padding: 0;
+                .overlay {
+                    position: absolute;
+                    width: 100%;
+                    height: 100%;
+                    background-color: rgba(0, 0, 0, 0.3);
+                    left: 0;
+                    pointer-events: none;
+                    top: 0;
+                    z-index: 10;
+                }
+                &:before {
+                    content: "";
+                    float: left;
+                    padding-top: 100%;
+                }
+                .blog-post__thumbnail {
+                    background-size: cover;
+                    background-repeat: no-repeat;
+                    background-position: center;
+                }
+                &__content-container {
+                    display: flex;
+                    flex-direction: column;
+                    height: 160px;
+                    margin-bottom: 30px;
+                }
+                &__content__category {
+                    position: relative;
+                    z-index: 100;
+                }
+                &__content__title {
+                    max-width: 80%;
+                    font-weight: 400;
+                    position: relative;
+                    z-index: 100;
+                }
+                &__content__subtitle {
+                    display: none;
+                }
+                &__content__read-more {
+                    margin-bottom: 0 !important;
+                }
+                &--featured {
+                    flex: 0 0 calc(100% - 6px);
+                    max-width: none;
+                    // overflow: hidden;
+                    margin-bottom: 150px;
+                    @media screen and (min-width: 800px) {
+                        margin-bottom: 5px;
+                    }
 
-					a {
-					// color: white;
-					width: 100%;
-					height: 100%;
-					background-repeat: no-repeat;
-					background-size: cover;
-					background-position: center;
-					display: inline-block;
-					position: relative;
-						padding: 0;
-					}
-					&:before {
-						content: '';
-						float: none;
-						padding-top: 0;
-					}
-					&:after {
-						content: '';
-						height: 1px;
-						background: #DDD;
-						width: 100%;
-						display: block;
-						position: absolute;
-						bottom: -75px;
-						@media screen and (min-width: 800px) {
-							display: none;
-						}
-					}
-					.blog-tile__content {
-						padding: 30px 30px;
-						&__meta {
-							font-size: 20px;
-							font-weight: 400;
-							line-height: 36px;
-							z-index: 100;
-							position: relative;
-							font-family: 'Calluna', sans-serif;
-						}
-						&__featured-flag {
-							// margin-left: 15px;
-							margin-bottom: 15px;
-							position: relative;
-							z-index: 100;
-						}
-						@media screen and (min-width: 800px) {
-							max-width: 80%;
-							&__meta {
-								font-size: 36px;
-							}
-						}
-					}
-					.blog-tile__content__details__title {
-						display: none;
-					}
-				}
-			}
-		}
-	}
+                    a {
+                        // color: white;
+                        width: 100%;
+                        height: 100%;
+                        background-repeat: no-repeat;
+                        background-size: cover;
+                        background-position: center;
+                        display: inline-block;
+                        position: relative;
+                        padding: 0;
+                    }
+                    &:before {
+                        content: "";
+                        float: none;
+                        padding-top: 0;
+                    }
+                    &:after {
+                        content: "";
+                        height: 1px;
+                        background: #ddd;
+                        width: 100%;
+                        display: block;
+                        position: absolute;
+                        bottom: -75px;
+                        @media screen and (min-width: 800px) {
+                            display: none;
+                        }
+                    }
+                    .blog-tile__content {
+                        padding: 30px 30px;
+                        &__meta {
+                            font-size: 20px;
+                            font-weight: 400;
+                            line-height: 36px;
+                            z-index: 100;
+                            position: relative;
+                            font-family: "Calluna", sans-serif;
+                        }
+                        &__featured-flag {
+                            // margin-left: 15px;
+                            margin-bottom: 15px;
+                            position: relative;
+                            z-index: 100;
+                        }
+                        @media screen and (min-width: 800px) {
+                            max-width: 80%;
+                            &__meta {
+                                font-size: 36px;
+                            }
+                        }
+                    }
+                    .blog-tile__content__details__title {
+                        display: none;
+                    }
+                }
+            }
+        }
+    }
 }
